--- a/charts/msg-ems-tp/values.yaml
+++ b/charts/msg-ems-tp/values.yaml
@@ -26,6 +26,7 @@ ems:
   stores: ftl
   sizing: small
   use: dev
+  activationUrl: "https://tib-activate:7070"
   # CAUTION: Current chart does not support overriding internal ports
   ports:
     httpPort: 9010
