--- a/charts/tp-cp-hawk-console-recipes/Chart.yaml
+++ b/charts/tp-cp-hawk-console-recipes/Chart.yaml
@@ -6,8 +6,9 @@ apiVersion: v2
 name: tp-cp-hawk-console-recipes
 description: TIBCO Platform Hawk Data Plane recipes
 type: application
-version: 1.4.18
-appVersion: "1.4.0"
+# version: 1.5.0
+version: "1.5.30"
+appVersion: "1.5.0"
 keywords:
   - tibco-platform
   - infra
