--- a/charts/tp-cp-hawk-console-recipes/templates/hawk-console.yaml
+++ b/charts/tp-cp-hawk-console-recipes/templates/hawk-console.yaml
@@ -15,12 +15,16 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.4.0",
-      "minCPVersion": "1.3.0",
+      "capabilityVersion": "1.5.0",
+      "minCPVersion": "1.5.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.hawkConsole.releaseDate | quote }},
       "releaseNotes": {{ .Values.capabilities.hawkConsole.releaseNotes | quote }},
-      "minVersionRequiredForUpgrade": "1.3.0"
+      "minVersionRequiredForUpgrade": "1.4.0",
+      "minDPVersion": {
+         "dp-core-infrastructure": "1.4.0",
+         "dp-configure-namespace": "1.4.0"
+      }
     }
   package.json: |
     {
@@ -45,7 +49,8 @@ data:
       helmCharts:
         - name: tp-dp-hawk-console
           namespace: ${NAMESPACE}
-          version: "1.4.18"
+          # FIXME: ??use: .Values.capabilities.hawkConsole.version ??
+          version: "1.5.30"
           repository:
             chartMuseum:
               host: ${HELM_REPO}
@@ -53,6 +58,7 @@ data:
             - content: |
                 image:
                   tag: {{ .Values.capabilities.hawkConsole.tag | quote }}
+                cpIsSingleNamespace: {{ include "tp-cp-hawk-console-recipes.cp-is-single-namespace" . | quote }}
                 hawkconsole:
                   readinessFailureThreshold: 10
                   readinessInitialDelaySeconds: 12
@@ -112,7 +118,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.4.0"
+          value: "1.5.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
