--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
@@ -66,7 +66,8 @@ images:
     image:
       name: hawk-prometheus-discoveryservice
       pullPolicy: IfNotPresent
-      tag: 119
+      # tag: 120
+      tag: "1.5.0.30"
 
 # Liveness and Readiness probe setting for Prometheus container
 promLivenessProbe:
@@ -78,7 +79,7 @@ promLivenessProbe:
   httpGet:
     path: /
     port: prometheus
-    scheme: HTTP    
+    scheme: HTTP
 promReadinessProbe:
   successThreshold: 1
   failureThreshold: 10
@@ -100,7 +101,7 @@ promDSLivenessProbe:
   httpGet:
     path: /target/hawkconsole
     port: prometheus-ds
-    scheme: HTTP    
+    scheme: HTTP
 promDSReadinessProbe:
   successThreshold: 1
   failureThreshold: 5
@@ -110,4 +111,4 @@ promDSReadinessProbe:
   httpGet:
     path: /target/hawkconsole
     port: prometheus-ds
-    scheme: HTTP  
+    scheme: HTTP
