--- a/charts/tp-cp-hawk/values.yaml
+++ b/charts/tp-cp-hawk/values.yaml
@@ -56,6 +56,7 @@ global:
         allowPrivilegeEscalation: false
         capabilities:
           drop:
+            - CAP_NET_RAW
             - ALL
 
 # Resource values for production like setup
@@ -85,7 +86,8 @@ images:
     image:
       name: hawk-scripts
       pullPolicy: IfNotPresent
-      tag: 184
+      # tag: 185
+      tag: "1.5.0.30"
 
 hawk:
   ## This is used to delete the DB while Uninstalling the Chart. Default it is set to false so it will just take the backup of DB, data in DB will be retained as it is.
