--- a/charts/tp-dp-hawk-console/Chart.yaml
+++ b/charts/tp-dp-hawk-console/Chart.yaml
@@ -1,7 +1,15 @@
+#
+# Copyright (c) 2023-2025. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
+
 apiVersion: v2
-appVersion: 1.4.0
+appVersion: 1.5.0
 description: A Helm chart for deploying the tp-dp-hawk-console service
 keywords:
 - "hawk-console"
+- "tp-msg-gateway"
 name: tp-dp-hawk-console
-version: 1.4.18
+# version: 1.5.0
+version: "1.5.30"
