--- a/charts/tp-dp-hawk-console/values.yaml
+++ b/charts/tp-dp-hawk-console/values.yaml
@@ -20,7 +20,7 @@ replicaCount: "1"
 
 image:
   name: hawk-console
-  tag: 30
+  tag: "1.5.0.30"
   pullPolicy: IfNotPresent
 
 nodeSelector:
@@ -43,6 +43,8 @@ global:
     resources:
       storage:
         storageClassName: ""
+      serviceaccount:
+        serviceAccountName: ""
     containerRegistry:
       url: "reldocker.tibco.com"
       secret:
@@ -80,6 +82,7 @@ ingress:
   annotations: {}
   pathPrefix: /tibco/agent/infra/hawkconsole/
   className: "tibco-dp-{{ .Values.global.cp.dataplaneId}}"  # Ex: nginx, haproxy
+  hostName: "dp-{{ .Values.global.cp.dataplaneId}}.platform.local"
 
 hawkconsole:
   hawkData:
@@ -87,6 +90,9 @@ hawkconsole:
     subPath: hawk/hawkconsole
     emsCertSubPath: hawk/emscerts
     pvcStorageSize: 2Gi
+    # Changing this on upgrade is not a legal STS Ugprades
+    # so match the 1.4.0 GA value to avoid breakage.
+    pvcAccessMode: ReadWriteMany
   # The number of successive failed probes before indicating readiness failure.
   readinessFailureThreshold: 10
 
@@ -116,6 +122,13 @@ hawkconsole:
 
   # The number of successive failed probes before indicating lives success.
   livenessSuccessThreshold: 1
+  # Configure Heap size and other java options
+  javaOptions: "-Xms1g -Xmx3g"
+
+  # Configure log level, Accepted values are ERROR, INFO, DEBUG and TRACE
+  # default log mode is INFO
+  log:
+    level: INFO
 
 # Pod Security Context configuration
 # This configuration ensures that the pod is run with non-root privileges for enhanced security.
@@ -142,3 +155,14 @@ securityContext:
       drop:
         - CAP_NET_RAW
         - ALL
+
+# Message Gateway additional settings
+msggw:
+  basename: ""
+  image: ""
+dp:
+  pullSecret: ""
+  registry: ""
+  repo: ""
+  pullPolicy: ""
+  serviceAccount: ""
