--- a/charts/oauth2-proxy-recipes/values.yaml
+++ b/charts/oauth2-proxy-recipes/values.yaml
@@ -8,11 +8,11 @@ capabilities:
     overwriteRecipe: "false"
     # set to true for latest version of recipe
     isLatest: "true"
-    # Helm chart version for cp proxy, default is latest
-    version: "10.1.37"
-    tag: "v1.4.11"
+    # Helm chart version for oauth2 proxy, default is latest
+    version: "10.2.1"
+    tag: "v1.5.1"
     # Timestamp of capability release
-    releaseDate: "2025/01/15"
+    releaseDate: "2025/02/26"
     # Either a link to document or the document itself specifying _what was fixed in this release.
     releaseNotes: "Enhancements, Bug fixes, etc."
 
