PCP-8715-I: platform-bootstrap sync

--- a/charts/platform-bootstrap/values.yaml
+++ b/charts/platform-bootstrap/values.yaml
@@ -34,6 +34,11 @@ global:
 
     useSingleNamespace: true
 
+    proxy:
+      httpProxy: ""
+      httpsProxy: ""
+      noProxy: ""
+
   external:
     dnsTunnelDomain: ""
     dnsDomain: ""
