Change linter URL

--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Add dependency chart repos
         run: |      
-          helm repo add tibco-platform https://tibcosoftware.github.io/tp-helm-charts/
+          helm repo add tibco-platform https://mpandav.github.io/tp-helm-charts/
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
