--- a/.github/workflows/release-chart-label.yaml
+++ b/.github/workflows/release-chart-label.yaml
@@ -1,15 +1,15 @@
-name: Release Charts
+name: Release Helm Charts by PR Label
 
 on:
-  push:
-    branches:
-      - 'main'
-      - 'releases/**'
+  pull_request:
+    types:
+      - labeled
     paths:
       - 'charts/**'
 
 jobs:
   release:
+    if: ${{ github.event.label.name == 'chart-build' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
