--- a/charts/dp-core-infrastructure/values.yaml
+++ b/charts/dp-core-infrastructure/values.yaml
@@ -42,7 +42,7 @@ tp-tibtunnel:
     remoteDebug: false  # Enable debug logging of this tunnel connection inside application (running in TIBCO Cloud)
     logFile: ""  # Full path to the output log file. If not specified, the logs will be printed on stdout
     configDir: ""  # Full path to the directory where to store the configuration file(s) (default "~/.tibtunnel")
-    networkCheckUrl: "https://www.google.com"  # Url to check for network connectivity
+    networkCheckUrl: ""  # Url to check for network connectivity
     infiniteRetries: false  # Irrespective of any error, keep trying to discover and connect to establish hybrid connectivity
     url: ""  # Connect Url generated from TIBCO Cloud Control plane
     onPremHost: "cpdpproxy"  # service name of on prem host
