--- a/charts/tp-cp-infra-recipes/templates/monitor-agent.yaml
+++ b/charts/tp-cp-infra-recipes/templates/monitor-agent.yaml
@@ -15,12 +15,16 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.5.0",
+      "capabilityVersion": "1.5.1",
       "minCPVersion": "1.1.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.monitorAgent.releaseDate | quote }},
       "releaseNotes": {{ .Values.capabilities.monitorAgent.releaseNotes | quote }},
-      "minVersionRequiredForUpgrade": "1.0.0"
+      "minVersionRequiredForUpgrade": "1.0.0",
+      "minDPVersion": {
+        "dp-core-infrastructure": "1.4.0",
+        "dp-configure-namespace": "1.4.0"
+      }
     }
   package.json: |
     {
@@ -103,7 +107,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.5.0"
+          value: "1.5.1"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
