--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -138,13 +138,13 @@ allInOne:
     #     hosts:
     #       - chart-example.local
     pathType:
-  # resources:
-  #   limits:
-  #     cpu: 500m
-  #     memory: 512Mi
-  #   requests:
-  #     cpu: 256m
-  #     memory: 128Mi
+  resources:
+    limits:
+      cpu: 500m
+      memory: 512Mi
+    requests:
+      cpu: 256m
+      memory: 128Mi
   nodeSelector: {}
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
