--- a/charts/opentelemetry-collector/templates/deployment.yaml
+++ b/charts/opentelemetry-collector/templates/deployment.yaml
@@ -20,7 +20,7 @@ metadata:
   {{- end }}
 spec:
 {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.replicaCount | default 1 }}
 {{- end }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
