--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -84,7 +84,7 @@ presets:
     enabled: false
   # Configures the Kubernetes Processor to add Kubernetes metadata.
   # Adds the k8sattributes processor to all the pipelines
-  # and adds the necessary rules to ClusteRole.
+  # and adds a preset of minimum required RBAC rules to ClusterRole.
   # Best used with mode = daemonset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-attributes-processor for details on the receiver.
   kubernetesAttributes:
@@ -97,7 +97,7 @@ presets:
     extractAllPodAnnotations: false
   # Configures the collector to collect node, pod, and container metrics from the API server on a kubelet..
   # Adds the kubeletstats receiver to the metrics pipeline
-  # and adds the necessary rules to ClusteRole.
+  # and adds the necessary rules to ClusterRole.
   # Best used with mode = daemonset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubeletstats-receiver for details on the receiver.
   kubeletMetrics:
@@ -111,7 +111,7 @@ presets:
     enabled: false
   # Configures the Kubernetes Cluster Receiver to collect cluster-level metrics.
   # Adds the k8s_cluster receiver to the metrics pipeline
-  # and adds the necessary rules to ClusteRole.
+  # and adds the necessary rules to ClusterRole.
   # Best used with mode = deployment or statefulset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-cluster-receiver for details on the receiver.
   clusterMetrics:
@@ -181,7 +181,6 @@ config:
 #        address: ${env:MY_POD_IP}:8888
     extensions:
       - health_check
-      - memory_ballast
 #    pipelines:
 #      logs:
 #        exporters:
@@ -324,6 +323,9 @@ extraVolumes: []
 # This also supports template content, which will eventually be converted to yaml.
 extraVolumeMounts: []
 
+# This also supports template content, which will eventually be converted to yaml.
+extraManifests: []
+
 # Configuration for ports
 # nodePort is also allowed
 ports:
@@ -372,6 +374,11 @@ ports:
     containerPort: 8888
     servicePort: 8888
     protocol: TCP
+
+# When enabled, the chart will set the GOMEMLIMIT env var to 80% of the configured resources.limits.memory.
+# If no resources.limits.memory are defined then enabling does nothing.
+# It is HIGHLY recommend to enable this setting and set a value for resources.limits.memory.
+useGOMEMLIMIT: true
 
 # Resource limits & requests. Update according to your own use case as these values might be too low for a typical deployment.
 # resources: {}
@@ -695,14 +702,6 @@ networkPolicy:
   #    ports:
   #      - port: 1234
   #        protocol: TCP
-
-# When enabled, the chart will set the GOMEMLIMIT env var to 80% of the configured
-# resources.limits.memory and remove the memory ballast extension.
-# If no resources.limits.memory are defined enabling does nothing.
-# In a future release this setting will be enabled by default.
-# See https://github.com/open-telemetry/opentelemetry-helm-charts/issues/891
-# for more details.
-useGOMEMLIMIT: true
 
 # Allow containers to share processes across pod namespace
 shareProcessNamespace: false
