--- a/charts/tp-cp-bootstrap/charts/otel-collector/templates/servicemonitor.yaml
+++ b/charts/tp-cp-bootstrap/charts/otel-collector/templates/servicemonitor.yaml
@@ -1,4 +1,9 @@
-{{- if and (eq (include "otel-collector.serviceEnabled" .) "true") .Values.serviceMonitor.enabled .Values.serviceMonitor.metricsEndpoints }}
+#
+# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
+{{ if and (eq (include "otel-collector.serviceEnabled" .) "true") .Values.serviceMonitor.enabled .Values.serviceMonitor.metricsEndpoints }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
