--- a/charts/tp-cp-recipes/Chart.yaml
+++ b/charts/tp-cp-recipes/Chart.yaml
@@ -9,8 +9,8 @@ name: tp-cp-recipes
 description: TIBCO Platform recipe chart
 
 type: application
-version: 1.5.68
-appVersion: "1.5.0"
+version: 1.5.1017
+appVersion: "1.5.1"
 keywords:
   - tibco-platform
   - platform
@@ -20,23 +20,26 @@ annotations:
   app.helm.sh/name: tp-cp-recipes
 dependencies:
   - name: tp-cp-infra-recipes
-    version: "1.5.18"
+    version: "1.5.1005"
     repository: alias:tibco-platform
   - name: tp-cp-bwce-recipes
-    version: "1.5.13"
+    version: "1.5.16"
     repository: alias:tibco-platform
   - name: tp-cp-flogo-recipes
-    version: "1.5.18"
+    version: "1.5.20"
     repository: alias:tibco-platform
   - name: tp-cp-tibcohub-recipes
-    version: "1.5.8"
+    version: "1.5.1003"
     repository: alias:tibco-platform
   - name: dp-oauth2proxy-recipes
-    version: "1.5.3"
+    version: "1.5.1001"
     repository: alias:tibco-platform
   - name: tp-cp-servicemesh-recipes
     version: "1.4.6"
     repository: alias:tibco-platform
   - name: tp-cp-hawk-console-recipes
     version: "1.5.30"
+    repository: alias:tibco-platform
+  - name: tp-cp-discoveryservice-recipes
+    version: "1.5.0"
     repository: alias:tibco-platform
