--- a/charts/tp-cp-core-ops/templates/create_admin_user.yaml
+++ b/charts/tp-cp-core-ops/templates/create_admin_user.yaml
@@ -9,7 +9,7 @@ kind: Job
 metadata:
   name: {{ include "tp-control-plane-ops.consts.appName" . }}-create-admin-user
   annotations:
-    "helm.sh/hook": post-install, post-upgrade
+    "helm.sh/hook": post-install
     "helm.sh/hook-weight": "5"
     "helm.sh/hook-delete-policy": before-hook-creation
   namespace: {{ include "tp-control-plane-ops.consts.namespace" . }}
