Copy monitoring+finops 1.5.1 chart changes

--- a/charts/tp-cp-core-finops/charts/finops-otel-collector/templates/deployment.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-otel-collector/templates/deployment.yaml
@@ -14,7 +14,7 @@ metadata:
   {{- end }}
 spec:
 {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.replicaCount | default 1 }}
 {{- end }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
