--- a/charts/tp-cp-core-finops/charts/finops-otel-collector/templates/servicemonitor.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-otel-collector/templates/servicemonitor.yaml
@@ -1,3 +1,8 @@
+#
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
 {{- if and .Values.serviceMonitor.enabled .Values.serviceMonitor.metricsEndpoints (or (eq .Values.mode "deployment") (eq .Values.mode "statefulset")) }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
