--- a/charts/tp-dp-monitor-agent/values.yaml
+++ b/charts/tp-dp-monitor-agent/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: "1"
 global:
-  LOG_LEVEL: debug
+  LOG_LEVEL: "info"
   tibco:
     logging:
       fluentbit:
@@ -60,8 +60,8 @@ resources:
 fluentbit:
   resources:
     requests:
-      cpu: "50m"
-      memory: "100Mi"
+      cpu: "10m"
+      memory: "15Mi"
     limits:
-      cpu: "100m"
-      memory: "150Mi"
+      cpu: "50m"
+      memory: "30Mi"
