BW and Flogo chart changes for 1.5.1 release

--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
@@ -111,6 +111,10 @@ bwStudioImages:
     path: /opt/downloads/
     tag: 2.10.0-HF1-hotfix-amd64
     target_location: bwce-studio/2.10.0-HF1/hotfix-amd64/
+  - image: tp-bw-studio
+    path: /opt/downloads/
+    tag: 2.10.0-HF2-hotfix-amd64
+    target_location: bwce-studio/2.10.0-HF2/hotfix-amd64/
 bwStudioDelete: false
 bwStudioDeleteVersions: ""
 
@@ -159,8 +163,8 @@ bwPluginsJobB:
     default: 6.10.0.v15.0.1-tci-2.0
   tci-bw-plugin-peoplesoft:
     tags:
-      - 7.4.0.v14-tci-2.0
-    default: 7.4.0.v14-tci-2.0
+      - 7.4.0.v19-tci-2.0
+    default: 7.4.0.v19-tci-2.0
   tci-bw-plugin-amazoncs:
     tags:
       - 6.1.1.v4.1-tci-2.0
@@ -205,8 +209,8 @@ bwPluginsJobC:
     default: 6.0.0.v16-tci-2.0
   tci-bw-plugin-sap:
     tags:
-      - 8.8.0.v21-tci-2.0
-    default: 8.8.0.v21-tci-2.0
+      - 8.8.0.v25-tci-2.0
+    default: 8.8.0.v25-tci-2.0
   tci-bw-plugin-mongodb:
     tags:
       - 6.4.2.v32-tci-2.0
@@ -397,7 +401,7 @@ images:
   tp-bwce-buildtype:
     extract_image: true
     path: /var/lib/bwce/buildtypes
-    tag: 2.10.0-HF1
+    tag: 2.10.0-HF2
     target_location: bwce/buildtypes
 
 probes:
