--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -16,6 +16,8 @@ global:
       repository: "tibco-platform-docker-prod"
     environmentType: ""
     enableResourceConstraints: true
+    # insecureSkipVerify is true by default because we are calling own services. To be more generally addressed in upcoming release.
+    authInsecureIngressController: true
     resources:
       serviceaccount:
         namespace: ""
