Publishing monitoring+finops 1.5.1 chart changes
Provide the exactimage versions in Chart.yaml

--- a/charts/tp-cp-core-finops/Chart.yaml
+++ b/charts/tp-cp-core-finops/Chart.yaml
@@ -2,15 +2,15 @@ apiVersion: v2
 appVersion: 1.5.1
 dependencies:
 - name: monitoring-service
-  version: 1.5.*
+  version: 1.5.444
 - name: finops-service
-  version: 1.5.*
+  version: 1.5.129
 - name: finops-prometheus
-  version: 1.5.*
+  version: 1.5.98
 - name: finops-web-server
-  version: 1.5.*
+  version: 1.5.323
 - name: finops-otel-collector
-  version: 1.5.*
+  version: 1.5.10
 description: A Helm chart for -- tp-cp-core-finops
 name: tp-cp-core-finops
 version: 1.5.549
